# prj-tickets

./: CMakeLists.txt
include/: dequeue_all.h  enqueue.h  new_ticket.h  queue.h
src/: dequeue_all.c  enqueue.c  main.c  new_ticket.c
tests/: CMakeLists.txt  test_tickets.c  test_tickets.cc
